--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
-        <li src="aboutme.html">ABOUT ME</li>
-    </section>
+    about me...
 </body>
 </html>
