--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Coding Student Website</title>
 </head>
 <body>
-    <section>
-        <li src="aboutme.html">ABOUT ME</li>
+    <header>
+        <h1>Coding Student</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section id="main-content">
+        <article>
+            <h2>Welcome to Coding Student!</h2>
+            <p>
+                Explore the world of coding and enhance your skills with our courses and projects.
+            </p>
+        </article>
     </section>
+
+    <footer>
+        <p>&copy; 2023 Coding Student. All rights reserved.</p>
+    </footer>
 </body>
 </html>
