--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Coding Student Website</title>
+    <title>Anuraag Nandi's Portfolio</title>
 </head>
 <body>
     <header>
@@ -13,7 +13,7 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="aboutme.html">Home</a></li>
             <li><a href="#">Courses</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
