MODIFED TO FINAL FORM

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Anuraag Nandi</a>
+                <a href="#" class="nav__logo">Nandi Anuraag V</a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
@@ -41,14 +41,14 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Anuraag</span><br> IIT Hyderabad
+                <h1 class="home__title"><br>I am <span class="home__title-color">Anuraag</span><br> From IIT Hyderabad
                 </h1>
             </div> 
         </section>
 
         <!--===== ABOUT =====-->
         <section class="about section " id="about">
-            <h2 class="section-title">About</h2>
+            <h2 class="section-title">ABOUT</h2>
 
             <div class="about__container bd-grid">
                 <div class="about__img">
@@ -57,15 +57,14 @@
 
                 <div>
                     <h2 class="about__subtitle">Hi, Anuraag here</h2>
-                    <p class="about__text">IIT hyderabad, Electrical Engineering student, interested in Machine
-                        Learning, LLVM Compilers, WEB Development, I also play tournament level Badminton</p>
+                    <p class="about__text">I am a student pursuing Electrical Engineering at IIT Hyderabad, with a keen interest in Machine Learning, LLVM Compilers, and WEB Development. I actively participate in tournament-level Badminton.</p>
                 </div>
             </div>
         </section>
 
         <!--===== SKILLS =====-->
         <section class="skills section" id="skills">
-            <h2 class="section-title">Skills</h2>
+            <h2 class="section-title">SKILLS</h2>
 
             <div class="skills__container bd-grid">
                 <div>
@@ -77,7 +76,7 @@
                             <!-- <i class='bx bxl-c skills__icon'></i> -->
                             <span class="skills__name">C++</span>
                         </div>
-                        <div class="skills__bar skills__html">
+                        <div class="skills__bar skills__cpp">
 
                         </div>
                         <div>
@@ -89,7 +88,7 @@
                             <!-- <i class='bx bxl-css3 skills__icon'></i> -->
                             <span class="skills__name">C</span>
                         </div>
-                        <div class="skills__bar skills__css">
+                        <div class="skills__bar skills__c">
 
                         </div>
                         <div>
@@ -101,14 +100,25 @@
                             <!-- <i class='bx bxl-javascript skills__icon' ></i> -->
                             <span class="skills__name">Python</span>
                         </div>
-                        <div class="skills__bar skills__js">
+                        <div class="skills__bar skills__py">
 
                         </div>
                         <div>
-                            <span class="skills__percentage">80%</span>
+                            <span class="skills__percentage">75%</span>
                         </div>
                     </div>
                     <div class="skills__data">
+                        <div class="skills__names">
+                            <!-- <i class='bx bxl-javascript skills__icon' ></i> -->
+                            <span class="skills__name">Machine Learning</span>
+                        </div>
+                        <div class="skills__bar skills__ML">
+
+                        </div>
+                        <div>
+                            <span class="skills__percentage">75%</span>
+                        </div>
+                    </div> <div class="skills__data">
                         <div class="skills__names">
                             <!-- <i class='bx bxl-javascript skills__icon' ></i> -->
                             <span class="skills__name">HTML, CSS, JS</span>
@@ -119,45 +129,38 @@
                         <div>
                             <span class="skills__percentage">65%</span>
                         </div>
-                    </div> <!--<div class="skills__data">
-                        <div class="skills__names">
-                            <i class='bx bxl-javascript skills__icon' ></i>
-                            <span class="skills__name">HTML, CSS, JS</span>
-                        </div>
-                        <div class="skills__bar skills__js">
-
-                        </div>
-                        <div>
-                            <span class="skills__percentage">65%</span>
-                        </div>
-                    </div> -->
+                    </div>
                 </div>
 
                 <div>
-                    <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                    <img src="assets/img/skills.jpg" alt="" class="skills__img">
                 </div>
             </div>
         </section>
 
         <!--===== WORKexp =====-->
         <section class="work section" id="work">
-            <h2 class="section-title">Work Experience</h2>
+            <h2 class="section-title">WORK EXPERIENCE</h2>
 
             <div class="workexp__container bd-grid">
-                <a href="" class="workexp__img">
+                <a href="https://www.xilinx.com/products/silicon-devices/acap/versal.html" class="workexp__img">
                     <img src="assets/img/AMD_Logo.svg.png" alt="" class="skills__img">
                 </a>
             </div>
 
-            <h2 class="workexp__text">Worked as AI Compiler Intern for 6 Months</h2>
-            <p class="workexp__text">the compiler was based on LLVM, which took Graph files from ML inferences
-                as Input and gave out Binaries that could run on AMD's Versal cards.</p>
+            <h2 class="workexp__text">Worked as AIE Compiler Intern for 6 Months</h2>
+            <p class="workexp__text">The compiler utilized in this context was intricately designed, drawing its foundation from LLVM. 
+                This powerful compiler took Graph files generated from machine learning inferences as its input and skillfully transformed 
+                them into optimized binaries. These binaries were specifically crafted to seamlessly run on AMD's cutting-edge Versal cards, 
+                showcasing a harmonious integration of versatile technologies. 
+                This synergy between LLVM-based compilation and the utilization of Graph files not only underlines the sophistication of the compiler but also highlights its ability to cater to the unique architecture and capabilities of AMD's Versal cards, 
+                elevating the overall efficiency and performance of the system.</p>
 
         </section>
 
         <!--===== work =====-->
         <section class="work section" id="work">
-            <h2 class="section-title">Projects</h2>
+            <h2 class="section-title">PROJECTS</h2>
             <div class="work__container bd-grid">
                 <a href="/assets/ProjectsData/stockmarketpredictor.pdf" class="work__img" title="Accurate Stock Market Forecasting">
                     <img src="assets/img/Phase-of-market-b.jpg">
@@ -184,17 +187,6 @@
         <!--===== CONTACT =====-->
         <section class="contact section" id="contact">
             <h2 class="section-title">Contact</h2>
-
-            <!-- <div class="contact__container bd-grid">
-                <form action="" class="contact__form">
-                    <input type="text" placeholder="Name" class="contact__input">
-                    <input type="mail" placeholder="Email" class="contact__input">
-                    <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                    <input type="button" value="Enviar" class="contact__button button">
-                </form>
-            </div> -->
-        
-    
             <div class="contact__social">
                 <a href="mailto:nandianuraag@gmail.com" class="home__social-icon"><i class='bx bxl-google'></i></a>
                 <a href="https://www.linkedin.com/in/nandi-anuraag-vishwanath-90684b177/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
@@ -209,12 +201,7 @@
     <!--===== FOOTER =====-->
     <footer class="footer">
         <p class="footer__title">Anuraag Nandi</p>
-        <!-- <div class="footer__social">
-            <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-instagram'></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-twitter'></i></a>
-        </div> -->
-        <p class="footer__copy">&#169; @2024 Anuraag Nandi. All rigths reserved</p>
+        <p class="footer__copy">&#169; 2024 Anuraag Nandi. All rigths reserved</p>
     </footer>
 
 
