added todo to projects

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
                 <a href="https://github.com/Anuraagnandi17/Diabetes_detection" class="work__img" title="Early Diabetes Detection">
                     <img src="assets/img/health-topics-2.jpg" alt="">
                 </a>
+                <a href="assets/ProjectsData/todo/index.html" class="work__img" title="TODO List">
+                    <img src="assets/img/todo.png" alt="">
+                </a>
                 <a href="https://github.com/Anuraagnandi17/Emotion-Recognition" class="work__img" title="Emotion Recognition">
                     <img src="assets/img/emotion_detection.png" alt="">
                 </a>
